# IARC10

./: .gitignore  README.md  extra_tabs.md
MakeshiftRoomba/: movement.ino
PeopleFollowing/: detection_testing.py  please_read_this.md  sudo_this_script_to_get_permissions_set.sh
Resources/: BasicsOfRos.md  ComputerVision.md  GuideToGit.md  IntroToDLNN.md  PX4Research.md
Resources/Autonomous/: PX4Research.md  Simulation.md
Resources/Guides/: ComputerVision.md  IntroToDLNN.md  Programs.md  PyrealsenseJetsonInstall.md  SettingUpIMU.md  VSCode.md  YOLOTraining.md
Resources/ROS/: Guides.md
Resources/Rasp-PI/: CMakeLists.txt  PiCamera.md  camera_code.cpp  camera_code.py  code-goes-here  temporalObjDet.py  textdetection.py
Resources/Rasp-PI/new code/: new_code.py  objectDetection.py
Resources/Rasp-PI/raspberry/: pyvenv.cfg
Resources/openCV_examples/: a1score (1).docx  color_masking.py  drawing.py  haar_detection.py  imu_test.py  picam.py  realsense_dection.py  webcam.py
